# pretty-good-AI-hiring-test

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
artifacts/final_call_selection/: final_call_candidates.json  final_call_candidates.md
docs/: ARCHITECTURE_DESIGN.md  BUG_ANALYSIS_WORKFLOW.md  BUG_TRACKING_APPENDIX.md  CALL_001_REVIEW.md  CALL_002_REVIEW.md  CALL_RECORDS.md  CALL_SCENARIOS.md  CANDIDATE_BUGS.md  DELIVERABLES.md  FINAL_BUG_REPORT.md  PRODUCT_OBSERVATIONS.md  PROJECT_PLAN.md
final_submission/: CALL_RECORDS_MANIFEST.csv  CALL_RECORDS_MANIFEST.json  CALL_RECORDS_PACKAGE.md  README.md
final_submission/Deliverables_Documents/: ARCHITECTURE_DESIGN.md  FINAL_BUG_REPORT.md
scripts/: select_final_call_candidates.py
src/voicebot/: __init__.py  artifacts.py  cli.py  config.py  constants.py  conversation_classifier.py  date_formatting.py  final_call_selection.py  openai_builders.py  patient_response_builders.py  realtime_bridge.py  safety.py  scenario.py  scenario_call_pipeline.py  scenario_loader.py  scenario_prompts.py  server.py  twilio_adapter.py  twilio_builders.py  twilio_caller.py
src/voicebot/personas/: __init__.py  aaliyah_washington.yaml  carmen_reyes.yaml  dmitri_volkov.yaml  frank_kowalski.yaml  george_papadopoulos.yaml  patricia_okonkwo.yaml  sofia_reyes_montoya.yaml
src/voicebot/scenarios/: a01_specific_time.yaml  a02_change_of_mind.yaml  (+30 more)
tests/: test_cli.py  test_config.py  test_final_call_selection.py  test_realtime_bridge.py  test_safety.py  test_scenario.py  test_scenario_call_pipeline.py  test_server.py
(+205 files in other folders)
