[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pretty-good-ai-hiring-test"
version = "0.1.0"
description = "Voice-bot test harness for the Pretty Good AI engineering challenge."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "twilio>=9.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
]

[project.scripts]
pgai-call = "voicebot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voicebot = ["scenarios/*.yaml", "scenarios/*.md", "personas/*.yaml"]
